--- a/AUTHORS
+++ b/AUTHORS
@@ -2,6 +2,7 @@ srptools authors
 ================
 
 Created by Igor `idle sign` Starikov.
+Modified by Harshit Saini.
 
 
 Contributors
@@ -9,3 +10,4 @@ Contributors
 
 Bouke Haarsma <https://github.com/Bouke>
 Michael Zimmermann <https://github.com/M1cha>
+Harshit Saini <https://github.com/harshitsaini>
